crates/math-core/tests/snapshots/wiki_test__wiki057.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\lessgtr, \\lesseqgtr, \\lesseqqgtr, \\gtrless, \\gtreqless, \\gtreqqless"
---
<math>
    <mo lspace="0" rspace="0">≶</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋚</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪋</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">≷</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋛</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪌</mo>
</math>
