crates/math-core/tests/snapshots/wiki_test__wiki061.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\prec, \\nprec, \\preceq, \\npreceq, \\precneqq"
---
<math>
    <mo lspace="0" rspace="0">≺</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⊀</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪯</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋠</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⪵</mo>
</math>
