crates/math-core/tests/snapshots/wiki_test__wiki064.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\preccurlyeq, \\curlyeqprec"
---
<math>
    <mo lspace="0" rspace="0">≼</mo>
    <mo>,</mo>
    <mo lspace="0" rspace="0">⋞</mo>
</math>
