crates/math-core/tests/snapshots/wiki_test__wiki069.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\perp, \\angle, \\sphericalangle, \\measuredangle, 45^\\circ"
---
<math>
    <mo lspace="0" rspace="0">⟂</mo>
    <mo>,</mo>
    <mi>∠</mi>
    <mo>,</mo>
    <mi>∢</mi>
    <mo>,</mo>
    <mi>∡</mi>
    <mo>,</mo>
    <msup>
        <mn>45</mn>
        <mo>∘</mo>
    </msup>
</math>
